<resources>
    <string name="app_name">procon33_RemoteTravelers_app</string>
    <string name="travel_button">旅行する</string>
    <string name="participant_input">参加者ID</string>
    <string name="title_activity_traveler">TravelerActivity</string>
    <string name="camera_button">写真\n撮る</string>
    <string name="pin_button">ピン\n置く</string>
    <string name="user_id_text">あなたのID:%s</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="comment_headline">ひとことコメント</string>
    <string name="back_button_text">保存せずに戻る</string>
    <string name="keep_button_text">レポートを保存</string>
    <string name="report_comment_hint">コメントを入力</string>
    <string name="cancel_button_text">取り消す</string>
    <string name="report_title_hint">タイトルを入力</string>
    <string name="report_image">Report_image</string>
    <string name="determine_pin_button">ピンを決定する</string>
    <string name="comment">コメントを開く</string>
    <string name="comment_submit_button">送信</string>
    <string name="track_on">追跡\nオン</string>
    <string name="track_off">追跡\nオフ</string>
    <string name="decide_suggestion_button">ピンを決定する</string>
    <string name="cancel_suggestion_button">ピンの設置をキャンセル</string>
    <string name="debug_button">デバッグ用参加者画面に遷移するボタン</string>
    <string name="traveler_situation">移動中</string>
    <string name="traveler_icon_image">Icon</string>
    <string name="album_button">旅のアルバム</string>
    <string name="view_album_title">旅レポート一覧</string>
    <string name="excitement_title">おすすめ度</string>
    <string name="excitement_initial">0%</string>
    <string name="percentage">%d%%</string>
    <string name="view_comment_text">マップに戻る</string>
    <string name="view_report_back">レポートアルバムに戻る</string>
    <string name="album_back_button">戻る</string>
    <string name="travel_exit_button">旅行終了</string>
</resources>