<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/current_location"
    tools:context=".activities.TravelerActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.TravelerActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/camera_button"
        android:text="@string/camera_button"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <Button
        android:id="@+id/current_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/current_location"
        android:text="@string/current_location_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        tools:ignore="TextContrastCheck" />
    <FrameLayout
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintTop_toBottomOf="@+id/map">

        <Button
            android:id="@+id/comment_door_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="@drawable/comment_button_design"
            app:backgroundTint="@null" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@drawable/comment_design"
                app:backgroundTint="@null"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@drawable/comment_design"
                app:backgroundTint="@null"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@drawable/comment_design"
                app:backgroundTint="@null"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="450dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/participants_input_design"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/report_comment_hint"
            android:inputType=""
            android:textColorHint="@color/gray"
            android:autofillHints="" />

        <Button
            android:id="@+id/comment_submit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:layout_gravity="right"
            android:background="#FFA0A0"
            android:text="@string/comment_submit_button"
            android:textColor="@color/black" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>