<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/travel_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@color/travel_button"
        android:text="@string/travel_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdText" />

    <TextView
        android:id="@+id/userIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ユーザID" />

    <EditText
        android:id="@+id/viewer1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:background="@drawable/participants_input_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/participant_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/viewer2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:background="@drawable/participants_input_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/participant_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewer1" />

    <EditText
        android:id="@+id/viewer3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:background="@drawable/participants_input_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/participant_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewer2" />

    <Button
        android:id="@+id/debug_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_button"
        app:layout_constraintBottom_toTopOf="@+id/userIdText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/debug_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="旅行者画面に遷移するボタン"
        app:layout_constraintBottom_toTopOf="@+id/debug_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/album_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/album_button"
        android:text="@string/album_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_optimizationLevel="ratio"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>